processed/jira/txt/LU/LU-18785.txt
Key:        LU-18785
Summary:    build fixes for newer gcc/kernel with -Werror=missing-prototypes
Link:       https://jira.whamcloud.com/browse/LU-18785
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Sat, 8 Mar 2025 03:47:23 +0000
Updated:    Tue, 24 Feb 2026 04:36:09 +0000
Resolved:   Thu, 20 Mar 2025 01:39:46 +0000

--- Description ---
ptlrpc:

lustre/ptlrpc/nodemap_range.c:271:6: error: no previous prototype for ‘__range_delete’ [-Werror=missing-prototypes]
  271 | void __range_delete(struct nodemap_range_tree *nm_range_tree,
      |      ^~~~~~~~~~~~~~

ofd:

lustre/ofd/ofd_oss.c:430:5: error: no previous prototype for ‘oss_mod_init’ [-Werror=missing-prototypes]
  430 | int oss_mod_init(void)
      |     ^~~~~~~~~~~~

--- Comment (pjones, Thu, 20 Mar 2025 01:39:46 +0000) ---
Merged for 2.17

--- Comment (gerrit, Wed, 19 Mar 2025 23:35:19 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/58342/

Subject: LU-18785 build: ofd, ptlrpc missing prototypes

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 2d1efde7f4dec9ca28ce4d82cabc9690d465dc75

--- Comment (gerrit, Sat, 8 Mar 2025 03:51:19 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/58342

Subject: LU-18785 build: ofd, ptlrpc missing prototypes

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: a4d6c1561475fc6993053f678b17f2113cf6e622
